# rag-pdf-qa

./: .gitignore  pyproject.toml  requirements.txt
notebook/: pdf_loader.ipynb
